# Image-Processing

./: README.md
Image_Carving/__MACOSX/code/: ._CMakeLists.txt  ._Icon_
Image_Carving/__MACOSX/code/src/: ._Icon_  ._main.cpp  ._sc.cpp  ._sc.h
Image_Carving/code/: CMakeLists.txt  README
Image_Carving/code/src/: main.cpp  sc.cpp  sc.h
Image_Segmentation/__MACOSX/code/: ._Icon_
Image_Segmentation/__MACOSX/code/assets/: ._Icon_
Image_Segmentation/__MACOSX/code/src/: ._Icon_
Image_Segmentation/code/: README
Image_Segmentation/code/src/: main.cpp
